<resources>
    <string name="app_name">PicChan</string>
    <string name="image_source">Image source</string>
    <string name="rotate">Rotate</string>
    <string name="invert_colors">Invert colors</string>
    <string name="mirror_image">Mirror image</string>
    <string name="set_image">Set image</string>
    <string name="image_result">Image result</string>
    <string name="select_source">Select source type</string>
    <string name="select_image">Select image</string>
    <string name="error_couldnt_use_image">Couldn\'t use image as source</string>
    <string-array name="sources_array">
        <item>Local</item>
        <item>Camera</item>
    </string-array>
    <string-array name="result_actions_array">
        <item>Use as source</item>
        <item>Remove</item>
    </string-array>
</resources>
