<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.ImageSourceFragment">

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/button_set_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/set_image" />

        <ImageView
            android:id="@+id/image_source"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/image_source" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/button_rotate_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rotate" />

        <Button
            android:id="@+id/button_grayscale_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/invert_colors" />

        <Button
            android:id="@+id/button_mirror_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mirror_image" />

    </LinearLayout>

</LinearLayout>